--- a/noticiastecnologia.html
+++ b/noticiastecnologia.html
@@ -49,7 +49,7 @@
         </div>
         <div class="contenidonoticias">
            <aside>
-                <p>¡Descubre las últimas noticias sobre videojuegos!</p>
+                <p>¡Descubre las últimas noticias sobre tecnología!</p>
 
                 <div class="otrasnoticias">
                     <a href="https://www.eleconomista.es/tecnologia/noticias/13342330/04/25/adios-a-temu-y-shein-las-plataformas-chinas-paran-su-produccion-por-la-caida-de-pedidos-ante-los-aranceles-de-eeuu.html"
